FIX: index.html width scrollbar issue

--- a/public/src/components/header.css
+++ b/public/src/components/header.css
@@ -123,6 +123,12 @@ header {
 #notification {
     color: white;
     font-size: 2rem;
+    border-radius: 50%;
+    padding: 5px;
+}
+
+#notification:hover {
+    outline: 2px solid red;
 }
 
 #avatar {
